--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,576 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@300&family=Roboto&family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@300&family=Rubik&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+/* -------------------------------------------------HTML----------------------------------------------- */
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: Microsoft sans serif;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+h1 {
+  font-family: "Lobster", cursive;
+  font-weight: bold;
+}
+
+li {
+  display: inline;
+}
+
+:root {
+  --default-white: #fff;
+  --default-red: #f23;
+  --default-dark: #222;
+  --default-green: #0f0;
+  --light-green: #4cdf58;
+  --nav-dark: #101016;
+  --transparent-color: rgba(0, 0, 0, 0);
+  --default-blue: #0000ff;
+  --light-blue: rgb(0, 162, 255);
+  --dark-blue: rgb(5, 2, 46);
+}
+
+nav {
+  top: 0;
+  left: 0;
+  position: fixed;
+  height: max-content;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+nav ul {
+  margin-right: auto;
+  gap: 6rem;
+}
+
+nav ul li a {
+  background-color: var(--transparent-color) !important;
+}
+
+nav ul li {
+  border: 2px solid var(--transparent-color);
+}
+
+nav ul li:hover {
+  border: 2px solid rgb(0, 142, 255);
+  border-radius: 50px;
+}
+
+nav ul .nav-item:nth-child(3) {
+  display: none;
+}
+
+/* -----------------------------------------------SIDEBAR--------------------------------------------- */
+
+.site-first-name {
+  font-family: "Lobster", cursive;
+  font-size: 1.5rem;
+  color: var(--default-white);
+}
+
+.site-last-name {
+  font-weight: bold;
+  font-size: 1rem;
+  color: rgb(0, 162, 255);
+}
+
+.menu-bars {
+  margin-left: 1rem;
+  margin-right: auto;
+  font-size: 2rem;
+  background: none;
+  color: rgb(0, 162, 255);
+}
+
+.sidebar {
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: 850ms;
+  overflow: hidden;
+  grid-area: sidebar;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow: hidden;
+}
+
+.top-sidebar-menu {
+  display: flex;
+  gap: 20px;
+  margin: 30px auto 30px -20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sidebar-menu-items {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.sidebar-text {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px 0px 8px -16px;
+  list-style: none;
+  height: 60px;
+  left: 0;
+  margin-left: -40px;
+  margin-bottom: 20px;
+  width: 350px;
+  font-family: "Roboto", Microsoft sans serif;
+}
+
+.sidebar-text a {
+  text-decoration: none;
+  color: #f5f5f5 !important;
+  font-size: 18px;
+  width: 100%;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.sidebar-text a:hover {
+  background-color: rgb(0, 162, 255);
+  color: var(--nav-dark);
+  transition: none;
+}
+
+.sidebar-items {
+  width: 100%;
+}
+
+.sidebar-toggle {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.sidebar-items span {
+  margin-left: 16px;
+}
+
+.profile {
+  position: absolute;
+  width: 100%;
+  height: fit-content;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid #bbb;
+  padding: 5px;
+  padding-right: 10px;
+}
+
+.profile h4 {
+  color: var(--default-white);
+  opacity: 0.5;
+  font-family: "Lobster", c;
+}
+
+.profile p {
+  color: var(--default-white);
+  opacity: 0.5;
+}
+
+.profile-img img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 15px;
+  margin-left: 0px;
+}
+
+/* -------------------------------------------HOME-SECTION--------------------------------------------- */
+
+#home-section {
+  position: relative;
+  background: linear-gradient(rgba(0, 162, 255, 0.7), rgba(0, 162, 255, 0.7)),
+    url(../public/Background-image.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+}
+
+#home-main-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#home-section h1,
+#home-section h1 span {
+  font-weight: bold;
+  color: #222;
+}
+
+#home-section h1 span {
+  color: #fff;
+}
+
+#home-section p {
+  color: white;
+  /* font-family: "Rubik"; */
+}
+
+.typed-text {
+  color: #fff;
+}
+
+#home-section button {
+  width: 150px;
+  padding: 10px;
+  font-size: 20px;
+  font-family: "Lobster", cursive;
+  background: var(--default-white);
+  border: 2px solid var(--transparent-color);
+  border-radius: 50px;
+  transform: skewX(20);
+  transform: skewX(-20deg);
+  -webkit-transform: skewX(-20deg);
+  -ms-transform: skewX(-20deg);
+  outline: none;
+  margin-top: 70px;
+}
+
+#home-section button a {
+  text-decoration: none;
+  color: #222;
+  transform: skewX(20deg);
+  -webkit-transform: skewX(20deg);
+  -ms-transform: skewX(20deg);
+  display: inline-block;
+  border-color: #222;
+}
+
+#home-section button:hover {
+  background: rgba(0, 0, 0, 0.1);
+  color: #fff;
+  border: 2px solid rgb(31, 73, 97);
+  transition: 0.5s;
+}
+
+.scroll-arr {
+  position: absolute;
+  display: flex;
+  justify-self: center;
+  align-self: center;
+  left: 48%;
+  animation: scroll-signal 1s linear infinite;
+  opacity: 0.5;
+}
+
+@keyframes scroll-signal {
+  0% {
+    top: 90%;
+  }
+  50% {
+    top: 95%;
+  }
+  100% {
+    top: 90%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* --------------------------------------------ABOUT-SECTION-------------------------------------------- */
+/* 
+#about-section {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  text-align: center;
+  background-color: #101016;
+  background-size: cover;
+  width: 100%;
+  height: max-content;
+  padding: 4rem 0 8rem 0;
+} */
+
+#about-section {
+  position: relative;
+  height: max-content;
+  width: 100%;
+  background-color: #101016;
+  padding: 8em 0 8em 0;
+}
+
+#about-main-info {
+  /*  position: absolute; */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  column-gap: 10vh;
+}
+
+#about-section h1 {
+  font-weight: bold;
+  color: #f5f5f5;
+}
+
+#about-section p {
+  font-family: "Rubik";
+}
+
+.about-headers {
+  font-family: "Lobster", cursive;
+  font-size: 4rem;
+  color: rgb(0, 162, 255);
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: 7rem;
+}
+
+.about-headers h1 {
+  margin-bottom: -20px;
+}
+
+.cardI {
+  position: relative;
+  width: 350px;
+  height: 200px;
+  background: #fff;
+  border-radius: 20px;
+  box-shadow: 0 5px 20px #000;
+  transition: 0.5s;
+  transform: scale(0.9);
+}
+
+.cardI:hover {
+  height: 37rem;
+}
+
+.imgBx {
+  position: absolute;
+  left: 50%;
+  top: -50%;
+  transform: translateX(-50%) !important;
+  width: 150px;
+  height: 150px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 15px 50px #000;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cardI:hover .imgBx {
+  top: -25%;
+  width: 200px;
+  height: 200px;
+}
+
+.cardI .about-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  overflow: hidden;
+}
+
+.cardI:hover .about-content .details {
+  margin-bottom: 0px;
+}
+
+.cardI .about-content .details {
+  padding: 40px;
+  text-align: center;
+  width: 100%;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -25rem;
+}
+
+.cardI .about-content .details h2 {
+  font-size: 2em;
+  font-weight: 600;
+  line-height: 1.2em;
+  font-family: "Lobster", cursive;
+  margin-bottom: 30px;
+  background: linear-gradient(to right, rgb(113, 0, 128), rgb(0, 162, 255));
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.cardI .about-content .details .title {
+  font-size: 0.75em;
+  font-weight: 600;
+  background: linear-gradient(to right, #222, #222);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  opacity: 0.5;
+  font-family: "Lobster two", cursive;
+  font-style: italic;
+}
+
+.cardI .about-content .details .data {
+  font-family: "Lobster two", cursive;
+}
+
+.about-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardI .about-btn button {
+  width: 100px;
+  height: 40px;
+  font-weight: bold;
+  font-family: "Lobster two", cursive;
+  border: none;
+  border-radius: 5px;
+  color: var(--default-white);
+  text-align: center;
+  cursor: pointer;
+  background-color: rgb(0, 162, 255);
+  box-shadow: 0 0 5px #222;
+  opacity: 0.8;
+}
+
+.about-btn button:hover {
+  opacity: 1;
+  transition: 0.5s;
+}
+
+.info {
+  text-align: center;
+  font-size: 1.25em;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.cardI-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  top: 10%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 850px) {
+  nav ul {
+    gap: 3rem;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 550px) {
+  .contact-btn {
+    margin-top: 10vh;
+  }
+
+  nav ul {
+    gap: 0;
+  }
+
+  nav ul .nav-item:nth-child(2) {
+    display: none;
+  }
+
+  nav ul .nav-item:nth-child(3) {
+    display: inline;
+  }
+  nav ul .nav-item:nth-child(4) {
+    display: none;
+  }
+
+  nav ul li:hover {
+    border: 2px solid var(--transparent-color);
+    border-radius: 50px;
+  }
+
+  #home-section button:hover {
+    background-color: white;
+    color: #000;
+  }
+
+  .card-box {
+    width: 100vw !important;
+    left: 0;
+  }
+
+  .cardI {
+    transform: scale(0.7);
+  }
+
+  .inputBox {
+    width: 90vw;
+  }
+
+  .inputBox input {
+    width: 90vw;
+  }
+
+  .inputBox textarea {
+    width: 90vw;
+  }
+
+  #contact-section button {
+    width: 90vw;
+    margin-right: 0;
   }
 }
