--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,10 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  background-color: #101016 !important;
+}
+
 h1 {
   font-family: "Lobster", cursive;
   font-weight: bold;
@@ -313,23 +317,6 @@ nav ul .nav-item:nth-child(3) {
 }
 
 /* --------------------------------------------ABOUT-SECTION-------------------------------------------- */
-/* 
-#about-section {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: #101016;
-  background-size: cover;
-  width: 100%;
-  height: max-content;
-  padding: 4rem 0 8rem 0;
-} */
 
 #about-section {
   position: relative;
@@ -512,9 +499,355 @@ nav ul .nav-item:nth-child(3) {
   top: 10%;
 }
 
+/* -----------------------------------------SKILLS-SECTION-------------------------------------------- */
+
+#skills-section {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #101016;
+  background-size: cover;
+  width: 100%;
+  height: max-content;
+  padding: 1rem 0 8rem 0;
+  color: #f5f5f5c7;
+}
+
+#skills-section h1 {
+  color: #f5f5f5;
+}
+
+#skills-section p {
+  font-weight: bold;
+  color: rgb(0, 162, 255);
+}
+
+#skills-section ul {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-box {
+  border: 1px solid rgb(0, 162, 255);
+  box-shadow: 0 0 5px rgb(0, 162, 255);
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  color: #f5f5f5c7;
+  position: relative;
+  width: 60vw !important;
+  left: 15%;
+}
+
+/* -----------------------------------------------CONTACT SECTION -------------------------------------- */
+
+#contact-section {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 150vh;
+  color: #fff;
+  background: #101016;
+}
+
+#contact-section form {
+  /* width: fit-content; */
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.inputBox {
+  position: relative;
+  width: 60vw;
+}
+
+.inputBox input {
+  width: 60vw;
+  padding: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  background: var(--nav-dark);
+  border-radius: 5px;
+  outline: none;
+  color: white;
+  font-size: 1em;
+}
+
+.inputBox .placeholder,
+.inputBox input:empty + .placeholder {
+  position: absolute;
+  left: 0;
+  padding: 10px;
+  pointer-events: none;
+  color: rgba(255, 255, 255, 0.25);
+  text-transform: uppercase;
+  transition: 0.5s;
+  background: none;
+}
+
+.inputBox input:focus + .placeholder,
+.inputBox input:valid + .placeholder {
+  color: rgb(0, 162, 255) !important;
+  transform: translateX(10px) translateY(-7px);
+  font-size: 0.75em;
+  padding: 0 10px;
+  background-color: var(--nav-dark) !important;
+  border-right: 1px solid rgb(0, 162, 255);
+  border-left: 1px solid rgb(0, 162, 255);
+  opacity: 1;
+}
+
+.inputBox input:focus {
+  border: 3px solid rgb(0, 162, 255);
+  background-color: var(--nav-dark);
+}
+
+/*   textarea   */
+
+.inputBox textarea {
+  width: 60vw;
+  height: 20vh;
+  padding: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  background: var(--nav-dark);
+  border-radius: 5px;
+  outline: none;
+  color: white;
+  font-size: 1em;
+}
+
+.inputBox .placeholder,
+.inputBox textarea:empty + .placeholder {
+  position: absolute;
+  left: 0;
+  padding: 10px;
+  pointer-events: none;
+  color: rgba(255, 255, 255, 0.25);
+  text-transform: uppercase;
+  transition: 0.5s;
+  background: none;
+}
+
+.inputBox textarea:focus + .placeholder,
+.inputBox textarea:valid + .placeholder {
+  color: rgb(0, 162, 255) !important;
+  transform: translateX(10px) translateY(-7px);
+  font-size: 0.75em;
+  padding: 0 10px;
+  background-color: var(--nav-dark) !important;
+  border-right: 1px solid rgb(0, 162, 255);
+  border-left: 1px solid rgb(0, 162, 255);
+  opacity: 1;
+}
+
+.inputBox textarea:focus {
+  border: 3px solid rgb(0, 162, 255);
+  background-color: var(--nav-dark);
+}
+
+#contact-section button {
+  width: 15vw;
+  padding: 10px;
+  font-size: 20px;
+  font-family: "Lobster", cursive;
+  border: 2px solid var(--transparent-color);
+  border-radius: 50px;
+  transform: skewX(20);
+  transform: skewX(-20deg);
+  -webkit-transform: skewX(-20deg);
+  -ms-transform: skewX(-20deg);
+  outline: none;
+  margin-bottom: 1rem;
+  margin-right: 6rem;
+}
+
+#contact-section button a {
+  text-decoration: none;
+  color: #222;
+  transform: skewX(20deg);
+  -webkit-transform: skewX(20deg);
+  -ms-transform: skewX(20deg);
+  display: inline-block;
+  border-color: #222;
+}
+
+#contact-section button:hover {
+  color: #fff;
+  transition: 0.5s;
+}
+
+#contact-section form button:disabled:hover {
+  transform: scale(1);
+  cursor: default;
+}
+
+#success-section {
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
+button:disabled {
+  opacity: 0.5;
+}
+
+.send-btn {
+  background: #00ff55;
+}
+
+.clear-btn {
+  background-color: #f23;
+}
+
+.show {
+  color: white;
+}
+
+.hide {
+  display: none;
+}
+
+.valid {
+  color: lime;
+}
+
+.offscreen {
+  display: none;
+}
+
+.instructions {
+  color: orange;
+}
+
+.hide {
+  display: none;
+}
+
+/* -------------------------------------------FOOTER SECTION------------------------------------------ */
+
+.footer-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: fit-content;
+  width: 100%;
+  place-items: center;
+  color: rgb(0, 162, 255);
+  padding: 20px;
+  background: #101016;
+}
+
+.footer-wrapper .button {
+  float: none;
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  margin: 0 5px;
+  overflow: hidden;
+  background: var(--nav-dark);
+  border: 3px solid rgb(0, 162, 255);
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.5s ease-out;
+}
+
+.footer-wrapper .button:hover {
+  width: 200px;
+}
+
+.footer-wrapper a {
+  color: rgb(0, 162, 255);
+  text-decoration: none;
+  font-family: "Lobster", cursive;
+}
+
+.footer-wrapper a:hover {
+  text-decoration: underline;
+  color: rgb(0, 162, 255);
+}
+
+.footer-wrapper .button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-wrapper .button .icons {
+  text-align: center;
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  border-radius: 50px;
+  box-sizing: border-box;
+  line-height: 60px;
+  margin-top: 0;
+}
+
+.footer-wrapper .button .icons .icon {
+  text-align: center;
+  font-size: 25px;
+  line-height: 60px;
+  color: rgb(0, 162, 255);
+}
+
+.footer-wrapper button:hover .icon {
+  color: #fff;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.code-brackets {
+  color: var(--transparent-color);
+  transition: color 0.3s ease-out;
+  animation: brackets-animation 3s ease-out infinite;
+}
+
+.tick {
+  transform: scale(1);
+  animation: tick 0.5s ease-out 1;
+}
+
+@keyframes tick {
+  from {
+    transform: scale(0.5);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
 @media screen and (max-width: 850px) {
   nav ul {
     gap: 3rem;
+  }
+
+  nav ul li:hover {
+    border: 2px solid var(--transparent-color);
+    border-radius: 50px;
   }
 }
 
@@ -536,11 +869,6 @@ nav ul .nav-item:nth-child(3) {
   }
   nav ul .nav-item:nth-child(4) {
     display: none;
-  }
-
-  nav ul li:hover {
-    border: 2px solid var(--transparent-color);
-    border-radius: 50px;
   }
 
   #home-section button:hover {
@@ -572,5 +900,19 @@ nav ul .nav-item:nth-child(3) {
   #contact-section button {
     width: 90vw;
     margin-right: 0;
+  }
+
+  .footer-wrapper {
+    position: relative;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+  }
+
+  .footer-wrapper .button:hover {
+    width: 60px;
   }
 }
