--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,6 @@ nav ul .nav-item:nth-child(3) {
 .sidebar-text a {
   text-decoration: none;
   color: #f5f5f5 !important;
-  font-size: 18px;
   width: 100%;
   height: 80%;
   display: flex;
@@ -190,6 +189,7 @@ nav ul .nav-item:nth-child(3) {
   position: absolute;
   width: 100%;
   height: fit-content;
+  margin-top: auto;
   bottom: 0;
   display: flex;
   flex-direction: row;
@@ -1170,10 +1170,9 @@ textarea {
 
 @media screen and (max-height: 480px) {
 
-  .sidebar {
-    height: 150vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
+  .sidebar-text {
+    height: 9vh;
+    transform: scale(0.9);
   }
 
   .footer-button-container {
@@ -1181,8 +1180,16 @@ textarea {
   }
 }
 
-@media screen and (max-height: 330px) {
+@media screen and (max-height: 360px) {
   #home-section {
     height: 130vh;
+  }
+
+  .top-sidebar-menu {
+    margin-top: 0;
+  }
+
+  .sidebar-text {
+    height: 5vh;
   }
 }
