--- a/src/App.css
+++ b/src/App.css
@@ -347,21 +347,13 @@ nav ul .nav-item:nth-child(3) {
   color: #f5f5f5;
 }
 
-#about-section p {
-  font-family: "Rubik";
-}
-
 .about-headers {
   font-family: "Lobster", cursive;
-  font-size: 4rem;
   color: rgb(0, 162, 255);
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 7rem;
-}
-
-.about-headers h1 {
-  margin-bottom: -20px;
+ column-gap: 4rem;
 }
 
 .cardI {
@@ -452,7 +444,7 @@ nav ul .nav-item:nth-child(3) {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   opacity: 0.5;
-  font-family: "Lobster two", cursive;
+  font-family: "Rubik";
   font-style: italic;
 }
 
