--- a/src/App.css
+++ b/src/App.css
@@ -449,7 +449,7 @@ nav ul .nav-item:nth-child(3) {
 }
 
 .cardI .about-content .details .data {
-  font-family: "Lobster two", cursive;
+  font-family: "Rubik";
 }
 
 .about-btn {
