--- a/src/App.css
+++ b/src/App.css
@@ -1116,6 +1116,10 @@ textarea {
     display: none;
   }
 
+  .top-sidebar-menu {
+    margin-top: 0;
+  }
+
   #home-section button:hover {
     background-color: white;
     color: #000;
