--- a/src/App.css
+++ b/src/App.css
@@ -1068,6 +1068,9 @@ textarea {
     overflow-x: hidden;
   }
 
+  .card-box {
+ transform: scale(0.9);
+} 
   #contact-section .send-btn a {
     color: #222;
   }
